Fix logo hard to see on navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -101,13 +101,12 @@ h1, h2, h3, h4, h5, h6 {
   z-index: 997;
   transition: all 0.5s;
   padding: 24px 0;
-  background: #002f6c;
 }
 #header.header-transparent {
   background: transparent;
 }
 #header.header-scrolled {
-  background: #103c75;
+  background: #fff;
   padding: 5px;
 }
 #header .logo img {
@@ -140,31 +139,50 @@ h1, h2, h3, h4, h5, h6 {
 .navbar li {
   position: relative;
 }
+.navbar > ul > li {
+  white-space: nowrap;
+  padding: 10px 0 10px 28px;
+}
 .navbar a, .navbar a:focus {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 8px 16px;
-  margin-left: 10px;
-  font-family: "Raleway", sans-serif;
-  font-size: 16px;
-  font-weight: 700;
-  color: #fff;
+  padding: 0 3px;
+  font-size: 15px;
+  font-weight: 600;
+  color: #222222;
   white-space: nowrap;
   transition: 0.3s;
+  position: relative;
 }
 .navbar a i, .navbar a:focus i {
   font-size: 12px;
   line-height: 0;
   margin-left: 5px;
 }
+.navbar > ul > li > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -6px;
+  left: 0;
+  background-color: #106eea;
+  visibility: hidden;
+  width: 0px;
+  transition: all 0.3s ease-in-out 0s;
+}
+.navbar a:hover:before, .navbar li:hover > a:before, .navbar .active:before {
+  visibility: visible;
+  width: 100%;
+}
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  background: rgba(255, 255, 255, 0.2);
+  color: #106eea;
 }
 .navbar .dropdown ul {
   display: block;
   position: absolute;
-  left: 10px;
+  left: 28px;
   top: calc(100% + 30px);
   margin: 0;
   padding: 10px 0;
@@ -180,16 +198,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 .navbar .dropdown ul a {
   padding: 10px 20px;
-  font-size: 15px;
-  text-transform: none;
-  font-weight: 600;
-  color: #2f4d5a;
+  font-weight: 400;
 }
 .navbar .dropdown ul a i {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #67b0d1;
+  color: #106eea;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
